--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ project_ideas.odt
 .Rhistory
 Peaks_annotated_*
 test_result_*
+Readme.html
+annotation_db_formyl.csv
+building_blocks.tsv
+config_file_long.csv
